# sentences2svg

./: .gitignore  Cargo.toml  README.md
src/: main.rs
