[package]
name = "sentences2csv"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
base64 = "0.13.0"
clap = "2.34.0"
nom = "7.1.0"
pico-args = "0.4.2"
svgtypes = "0.8.0"
ttf-parser = "0.13.4"
xmlwriter = "0.1.0"
